@@ -67,11 +67,14 @@ Phrases related to the Manage Metadata Fields tool.
 	</div>
 	</epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/View:remove">Remove</epp:phrase>
+    <epp:phrase id="Plugin/Screen/MetaField/View:edit">Edit</epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/View:core_field"><em>Core Field</em></epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/View:config_field">From cfg.d</epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/View:cancel">Cancel</epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/View:confirm">Confirm</epp:phrase>
+    <epp:phrase id="Plugin/Screen/MetaField/View:bad_name">The name of a field must contain only the letters a-z and underscore (requested name was "<epc:pin name="name" />")</epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/View:invalid_field">The field "<epc:pin name="fieldid" />" you are attempting to modify doesn't appear to be configured for the dataset "<epc:pin name="datasetid"/>" (perhaps it's a system field?).</epp:phrase>
+    <epp:phrase id="Plugin/Screen/MetaField/View:confirm_edit">You are about to edit the configuration and database settings for the <em><epc:pin name="fieldid"/></em> field in the <em><epc:pin name="datasetid"/></em> dataset. <b>You may permanently lose data any stored in <em><epc:pin name="fieldid"/></em>!</b> If you are sure this is what you want to do click the confirm button. <epc:pin name="confirm_button"/></epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/View:confirm_remove">You are about to remove the configuration and database settings for the <em><epc:pin name="fieldid"/></em> field in the <em><epc:pin name="datasetid"/></em> dataset. <b>This means you will permanently lose any data stored in <em><epc:pin name="fieldid"/></em>!</b> If you are sure this is what you want to do click the confirm button. <epc:pin name="confirm_button"/></epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/Commit:metafield_committed">Added the configuration and database settings for the <em><epc:pin name="fieldid"/></em> field in the <em><epc:pin name="datasetid"/></em> dataset.</epp:phrase>
     <epp:phrase id="Plugin/Screen/MetaField/View:removed_field">Removed the configuration and database settings for the <em><epc:pin name="fieldid"/></em> field in the <em><epc:pin name="datasetid"/></em> dataset.</epp:phrase>
@@ -323,5 +326,10 @@ For more information see <a href="http://eprints.org/d/?keyword=MetaFields">Meta
 <epp:phrase id="metafield_fieldopt_fields_input_style_short">Short</epp:phrase>
 
 <epp:phrase id="validate:unknown_datasetid">Unspecified or unknown dataset id "<epc:pin name="datasetid"/>" given</epp:phrase>
+<epp:phrase id="validate:missing_property">Missing required property "<epc:pin name="property"/>"</epp:phrase>
+
+<epp:phrase id="metafield_fieldname_mfdatasetid">Parent Dataset</epp:phrase>
+<epp:phrase id="metafield_fieldname_mfstatus">Field Status</epp:phrase>
+<epp:phrase id="metafield_fieldname_providence">Field Provenance</epp:phrase>
 
 </epp:phrases>
