@@ -43,13 +43,13 @@ use EPrints::MetaField;
 
 sub get_sql_type
 {
-	my( $self, $session, $notnull ) = @_;
+	my( $self, $session ) = @_;
 
 	# Could be a 'SET' on MySQL/Postgres
 	return $session->get_database->get_column_type(
 		$self->get_sql_name(),
 		EPrints::Database::SQL_VARCHAR,
-		$notnull,
+		!$self->get_property( "allow_null" ),
 		5, # 'TRUE' or 'FALSE'
 		undef,
 		$self->get_sql_properties,
