@@ -43,12 +43,12 @@ use EPrints::MetaField::Set;
 
 sub get_sql_type
 {
-	my( $self, $session, $notnull ) = @_;
+	my( $self, $session ) = @_;
 
 	return $session->get_database->get_column_type(
 		$self->get_sql_name(),
 		EPrints::Database::SQL_VARCHAR,
-		$notnull,
+		!$self->get_property( "allow_null" ),
 		16,
 		undef,
 		$self->get_sql_properties,
