@@ -42,12 +42,15 @@ use EPrints::MetaField::Text;
 
 sub get_sql_type
 {
-	my( $self, $session, $notnull ) = @_;
+	my( $self, $session ) = @_;
 
 	return $session->get_database->get_column_type(
 		$self->get_sql_name(),
 		EPrints::Database::SQL_LONGVARCHAR,
-		$notnull,
+		!$self->get_property( "allow_null" ),
+		undef,
+		undef,
+		$self->get_sql_properties
 	);
 }
 
